# kia_bot

./: .gitignore  Makefile  README.MD  conf.json  main.py  pyproject.toml  requirements.txt  setup.py
bot/: handlers.py  middlewares.py
db/: __init__.py
db/relational/: main.py
llm/: __init__.py  api.py  api_deprecated.py  db.py
log/: conf.json  handlers.py  main.py
